[package]
name = "trcrt"
version = "0.1.0"
authors = ["zeroed <zeroed@posteo.net>"]
edition = "2018"

[lib]
name = "trcrtlib"      # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = false          # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[bin]]
name = "trcrt"
path = "src/bin.rs"
test = false
bench = false

[dependencies]

# https://crates.io/crates/log
# https://github.com/rust-lang/log
log = "0.4.11"

# https://crates.io/crates/env_logger
# https://github.com/env-logger-rs/env_logger
env_logger = "0.7.1"

# https://crates.io/crates/smoltcp
# https://github.com/smoltcp-rs/smoltcp
smoltcp = { version = "0.6.0", features = ["std", "log", "verbose"] }

# https://crates.io/crates/pnet
# https://github.com/libpnet/libpnet
pnet = "0.26.0"

# https://crates.io/crates/libc
# https://github.com/rust-lang/libc
libc = "0.2.77"
